# swifty-redis

./: .gitignore  .gitmodules  Package.resolved  Package.swift  README.md
.github/workflows/: build-docc.yml  docs.yml  generate-docc.yml  integration-tests.yml  run-tests.yml
Sources/CodeGen/: .gitignore  README.md  config.json  config.py  generate-commands.py  generate-tests.py  generate.py  git_utils.py  parse.py  pyproject.toml  pyrightconfig.json  requirements.txt  swift_format.py  templates.py  utils.py
Sources/CodeGen/config/: commands_to_ignore.json  formatting_config.json  names_to_substitute.json  tokens_to_substitute.json
Sources/CodeGen/parsing_types/: argument.py  command.py  complex_argument.py  enum_argument.py  options_argument.py  struct_argument.py
Sources/CodeGen/templates/: command.swift  command_test.swift  enum.swift  extension.swift  options.swift  parameter.swift  struct.swift  test.swift  test_parameter.swift
Sources/SwiftyRedis/: AsyncNetworking.swift  AsyncUtils.swift  Client.swift  Cmd.swift  Commands.swift  Connection.swift  Errors.swift  FromRedisValue.swift  JSONValue.swift  Pipeline.swift  ProtocolSpec.swift  PubSub.swift  RedisValue.swift  ResponseParser.swift  ResponseValueParser.swift  Stream.swift  SwiftyRedis.swift  ToRedisArgs.swift  Transaction.swift  Value.swift
Sources/swiftyRedis/: swiftyRedis.swift
Tests/SwiftyRedisTests/: CommandTests.swift  ConnectionTests.swift  PubSubConnectionTests.swift  ResponseParserTests.swift  ResponseValueParserTests.swift  SwiftyRedisTests.swift  TransactionTests.swift
(+78 files in other folders)
